<resources>
    <string name="app_name">Sehat+</string>
    <string name="slogan">Stay fit everyday</string>
    <string name="lets_get">LETS<br />GET\nSTARTED</string>
    <string name="aboutus">ABOUT\nUS</string>
    <string name="btn_getS"> Okay </string>
    <string name="about1">This project is created and design by Muhammad Faizil Putra and Maduri as a part of Final Exam for Mobile Development Subject.</string>
    <string name="about2">The app still need some TLC, so we decided to rendered as alpha, and will be publish on github.com/f4pro for further improvement.</string>
    <string name="subAbout">2022, Kelompok 2 - G19 TIB</string>

    <string name="loginScreenTi">SIGN<br />IN</string>
    <string name="signupScreenTi">SIGN<br />UP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_signUp">Not have an account?<b> Sign Up</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="go_back_reg">Go Back</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="nameSignUp">Name</string>
    <string name="doctor">Doctor</string>
    <string name="forum">Forum</string>

    <string name="under_construction">n/a</string>
    <string name="forum_sec">Forum</string>
    <string name="log_out">Log out</string>
    <string name="login_as_test">Login As</string>
    <string name="titleDialogLO">Sign out</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for splashes for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_notifications">Notifications</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="user_image">User image</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="request_sent">Request sent</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="change_image">Change Image</string>
    <string name="title_chats">Chats</string>
</resources>