<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="193dp"
        android:layout_height="178dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/signupScreenTi"
        android:textAppearance="@style/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTi"
        android:layout_width="292dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/sign_up"
        app:layout_constraintVertical_bias="0.034">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nameSignUp"
            android:inputType="textPersonName"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTi"
        android:layout_width="290dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/nameTi"
        app:layout_constraintStart_toStartOf="@+id/nameTi"
        app:layout_constraintTop_toBottomOf="@+id/nameTi">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/passwordTi"
        android:layout_width="290dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/emailTi"
        app:layout_constraintStart_toStartOf="@+id/emailTi"
        app:layout_constraintTop_toBottomOf="@+id/emailTi">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passConfTi"
        android:layout_width="290dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTi"
        app:layout_constraintStart_toStartOf="@+id/passwordTi"
        app:layout_constraintTop_toBottomOf="@+id/passwordTi">

        <EditText
            android:id="@+id/passConfEt"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passConfTi"
        app:layout_constraintTop_toBottomOf="@+id/passConfTi"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/ic_circular_baseline_arrow_forward_24" />

    <TextView
        android:id="@+id/goBackTBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUpBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passConfTi"
        app:layout_constraintTop_toBottomOf="@+id/passConfTi"
        app:layout_constraintVertical_bias="0.323" />
</androidx.constraintlayout.widget.ConstraintLayout>
