<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/transparent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_arrow_back"
            app:tint="@color/black" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="22dp"
        android:text="@string/aboutus"
        android:textAppearance="@style/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

    <TextView
        android:id="@+id/about1Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/googlesans_regular"
        android:text="@string/about1"
        android:textAlignment="gravity"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <TextView
        android:id="@+id/about2Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/googlesans_regular"
        android:text="@string/about2"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about1Tv" />

    <TextView
        android:id="@+id/subAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/google_sans_bold"
        android:text="@string/subAbout"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about2Tv" />
</androidx.constraintlayout.widget.ConstraintLayout>